Making mysqlnd emit no warnings when fetching pooled persistent connections that have timed out or are unusable for any other reason - bug #49761

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@289684 c90b9560-bf6c-de11-be94-00142212c4b1